# discord-bot

./: README.md  luncher.py  pyproject.toml  requirements.txt
data/: profanity.txt
data/db/: build.sql
lib/bot/: __init__.py
lib/cogs/: exp.py  fun.py  log.py  mod.py  reactions.py
lib/db/: db.py
