[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["obiorbitalstar <obiorbitalstar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
discord-ext-menus = "^1.1"
APScheduler = "^3.7.0"
aiosqlite = "^0.17.0"
better-profanity = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
